--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
     </div>
     </section>
     
+    <h1>My Mission In <span class="orange">2022</span></h1>
+    <section>
+
+    <div class="maf">
+        <img src="images/illustrators/illustrator-1.png" alt="">
+        <h3>Mission</h3>
+        <p>It is a good time for me to learn web development .I should give time in this course.</p>
+    </div>
+    <div class="maf">
+        <img src="images/illustrators/illustrator-2.png" alt="">
+        <h3>Vission</h3>
+        <p>I feel confident on myself and i can do.But it is not so easy at all.</p>
+    </div>
+    <div class="maf">
+        <img src="images/illustrators/illustrator-3.png" alt="">
+        <h3>Goal</h3>
+        <P>I want to be a good learner.Good learning is necessary for everyone</P>
+    </div>
+    </section>
+    
 </body>
 </html>
