--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         <P>I want to be a good learner.Good learning is necessary for everyone</P>
     </div>
     </section>
+    <section>
+        <div class="baf">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="baf">
+            <h2>Develop</h2>
+            <h2>Without Limits</h2>
+            <p>Learning has no any limitation.So,we should learn more and more.It will be helpful for our carrer as well as future.</p>
+            <p class="click">Read the Documentation</p>
+
+        </div>
+
+
+
+
+    </section>
     
 </body>
 </html>
