--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
 
 
     </section>
+    <section>
+        <div class="taf">
+            <h1>Know Your</h1>
+            <h1>Global community</h1>
+            <p>We live in our family.A community is added by much family.It called community.Thus a global community run.Every single person is a member of Global community.</p>
+            <p>Read the Documentation</p>
+        </div>
+        <div class="taf">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+
+
+
+    </section>
     
 </body>
 </html>
