--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
 
 
     </section>
+    <section>
+        <div class="kaf"> 
+            <h1>Develop Your Skill </h1>
+            <img src="images/shapes/shape-8.png" alt="">
+        </div>
+        <div class="kaf"><h1>IT SKILL......</h1>
+            <ul>
+                <li>Cybersecurity</li>
+                <li>Cloud Computing</li>
+                <li>Data Analytics</li>
+                <li>Software Development</li>
+                <li>Projects Management</li>
+                <li>Programming</li>
+
+
+            </ul>
+
+        </div>
+
+
+
+
+
+    </section>
     
 </body>
 </html>
